<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TPDice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">Dice Game</string>
    <string name="button1">Dice 6</string>
    <string name="button2">Dice 20</string>

    <string name="roll"> sided Dice</string>
    <string name="buttonRoll">Roll the dice</string>
    
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
</resources>
