<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/icon_search"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search"
        />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/icon_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"
        />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/icon_help"
        android:showAsAction="ifRoom"
        android:title="@string/menu_help"
        />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/icon_about"
        android:showAsAction="never"
        android:title="@string/menu_about"
        />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/icon_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"
        />
</menu>
